--- a/style.css
+++ b/style.css
@@ -103,22 +103,8 @@ input, select {
 
 /* MY CODE*/
 
-.main-wrapper {
-    margin: 0 auto;
-    width: 1000 px;
-}
-
-body {
-
-}
-
-header nav {
-    width: 100%;
-    height: 60px;
-}
-
-header nav {
-    width: 100%;
-    height: 60px;
+#logo {
+    padding-top:0px;
+    padding-bottom: 0px;
 }
 
